feat: add WnTimestamp component (#149)
Add a timestamp widget for chat list that displays relative/absolute time
based on message age:
- Now: < 60 seconds
- Minutes: 1-59m (e.g., "32m")
- Hours: 1-12h (e.g., "4h")
- Time: same day, 12+ hours (e.g., "14:30")
- Yesterday: previous day, 12+ hours ago
- Weekday: 2-6 days ago (e.g., "Monday")
- Date: > 6 days, < 1 year (e.g., "Jun 10")
- Date & Year: > 1 year (e.g., "Jan 9, 2009")

Includes localization for 8 languages and widgetbook showcase with
interactive date/time picker playground.

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -144,5 +144,28 @@
   "scanNsec": "QR-Code scannen",
   "scanNsecHint": "Scannen Sie den QR-Code Ihres privaten Schlüssels zum Anmelden.",
   "cameraPermissionDenied": "Kamerazugriff verweigert",
-  "somethingWentWrong": "Etwas ist schiefgelaufen"
+  "somethingWentWrong": "Etwas ist schiefgelaufen",
+  "timestampNow": "Jetzt",
+  "timestampMinutes": "{count}m",
+  "timestampHours": "{count}h",
+  "timestampYesterday": "Gestern",
+  "weekdayMonday": "Montag",
+  "weekdayTuesday": "Dienstag",
+  "weekdayWednesday": "Mittwoch",
+  "weekdayThursday": "Donnerstag",
+  "weekdayFriday": "Freitag",
+  "weekdaySaturday": "Samstag",
+  "weekdaySunday": "Sonntag",
+  "monthJanShort": "Jan",
+  "monthFebShort": "Feb",
+  "monthMarShort": "Mär",
+  "monthAprShort": "Apr",
+  "monthMayShort": "Mai",
+  "monthJunShort": "Jun",
+  "monthJulShort": "Jul",
+  "monthAugShort": "Aug",
+  "monthSepShort": "Sep",
+  "monthOctShort": "Okt",
+  "monthNovShort": "Nov",
+  "monthDecShort": "Dez"
 }
