--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -144,5 +144,28 @@
   "scanNsec": "Scanner le code QR",
   "scanNsecHint": "Scannez le code QR de votre clé privée pour vous connecter.",
   "cameraPermissionDenied": "Autorisation caméra refusée",
-  "somethingWentWrong": "Une erreur s'est produite"
+  "somethingWentWrong": "Une erreur s'est produite",
+  "timestampNow": "Maintenant",
+  "timestampMinutes": "{count}m",
+  "timestampHours": "{count}h",
+  "timestampYesterday": "Hier",
+  "weekdayMonday": "Lundi",
+  "weekdayTuesday": "Mardi",
+  "weekdayWednesday": "Mercredi",
+  "weekdayThursday": "Jeudi",
+  "weekdayFriday": "Vendredi",
+  "weekdaySaturday": "Samedi",
+  "weekdaySunday": "Dimanche",
+  "monthJanShort": "Jan",
+  "monthFebShort": "Fév",
+  "monthMarShort": "Mar",
+  "monthAprShort": "Avr",
+  "monthMayShort": "Mai",
+  "monthJunShort": "Juin",
+  "monthJulShort": "Juil",
+  "monthAugShort": "Août",
+  "monthSepShort": "Sep",
+  "monthOctShort": "Oct",
+  "monthNovShort": "Nov",
+  "monthDecShort": "Déc"
 }
