--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -144,5 +144,28 @@
   "scanNsec": "Сканировать QR-код",
   "scanNsecHint": "Отсканируйте QR-код вашего приватного ключа для входа.",
   "cameraPermissionDenied": "Доступ к камере запрещён",
-  "somethingWentWrong": "Что-то пошло не так"
+  "somethingWentWrong": "Что-то пошло не так",
+  "timestampNow": "Сейчас",
+  "timestampMinutes": "{count}м",
+  "timestampHours": "{count}ч",
+  "timestampYesterday": "Вчера",
+  "weekdayMonday": "Понедельник",
+  "weekdayTuesday": "Вторник",
+  "weekdayWednesday": "Среда",
+  "weekdayThursday": "Четверг",
+  "weekdayFriday": "Пятница",
+  "weekdaySaturday": "Суббота",
+  "weekdaySunday": "Воскресенье",
+  "monthJanShort": "Янв",
+  "monthFebShort": "Фев",
+  "monthMarShort": "Мар",
+  "monthAprShort": "Апр",
+  "monthMayShort": "Май",
+  "monthJunShort": "Июн",
+  "monthJulShort": "Июл",
+  "monthAugShort": "Авг",
+  "monthSepShort": "Сен",
+  "monthOctShort": "Окт",
+  "monthNovShort": "Ноя",
+  "monthDecShort": "Дек"
 }
