--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -144,5 +144,28 @@
   "scanNsec": "Scansiona codice QR",
   "scanNsecHint": "Scansiona il codice QR della tua chiave privata per accedere.",
   "cameraPermissionDenied": "Permesso fotocamera negato",
-  "somethingWentWrong": "Qualcosa è andato storto"
+  "somethingWentWrong": "Qualcosa è andato storto",
+  "timestampNow": "Ora",
+  "timestampMinutes": "{count}m",
+  "timestampHours": "{count}h",
+  "timestampYesterday": "Ieri",
+  "weekdayMonday": "Lunedì",
+  "weekdayTuesday": "Martedì",
+  "weekdayWednesday": "Mercoledì",
+  "weekdayThursday": "Giovedì",
+  "weekdayFriday": "Venerdì",
+  "weekdaySaturday": "Sabato",
+  "weekdaySunday": "Domenica",
+  "monthJanShort": "Gen",
+  "monthFebShort": "Feb",
+  "monthMarShort": "Mar",
+  "monthAprShort": "Apr",
+  "monthMayShort": "Mag",
+  "monthJunShort": "Giu",
+  "monthJulShort": "Lug",
+  "monthAugShort": "Ago",
+  "monthSepShort": "Set",
+  "monthOctShort": "Ott",
+  "monthNovShort": "Nov",
+  "monthDecShort": "Dic"
 }
