--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -144,5 +144,28 @@
   "scanNsec": "QR kodu tara",
   "scanNsecHint": "Giriş yapmak için özel anahtar QR kodunuzu tarayın.",
   "cameraPermissionDenied": "Kamera izni reddedildi",
-  "somethingWentWrong": "Bir şeyler yanlış gitti"
+  "somethingWentWrong": "Bir şeyler yanlış gitti",
+  "timestampNow": "Şimdi",
+  "timestampMinutes": "{count}d",
+  "timestampHours": "{count}sa",
+  "timestampYesterday": "Dün",
+  "weekdayMonday": "Pazartesi",
+  "weekdayTuesday": "Salı",
+  "weekdayWednesday": "Çarşamba",
+  "weekdayThursday": "Perşembe",
+  "weekdayFriday": "Cuma",
+  "weekdaySaturday": "Cumartesi",
+  "weekdaySunday": "Pazar",
+  "monthJanShort": "Oca",
+  "monthFebShort": "Şub",
+  "monthMarShort": "Mar",
+  "monthAprShort": "Nis",
+  "monthMayShort": "May",
+  "monthJunShort": "Haz",
+  "monthJulShort": "Tem",
+  "monthAugShort": "Ağu",
+  "monthSepShort": "Eyl",
+  "monthOctShort": "Eki",
+  "monthNovShort": "Kas",
+  "monthDecShort": "Ara"
 }
