fix(l10n): use clear Turkish minutes abbreviation 'dk' instead of ambiguous 'd'

--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -146,7 +146,7 @@
   "cameraPermissionDenied": "Kamera izni reddedildi",
   "somethingWentWrong": "Bir şeyler yanlış gitti",
   "timestampNow": "Şimdi",
-  "timestampMinutes": "{count}d",
+  "timestampMinutes": "{count}dk",
   "timestampHours": "{count}sa",
   "timestampYesterday": "Dün",
   "weekdayMonday": "Pazartesi",
