Invalid npub check

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -146,5 +146,6 @@
   "cameraPermissionDenied": "Permiso de cámara denegado",
   "somethingWentWrong": "Algo salió mal",
   "scanNpub": "Escanear código QR",
-  "scanNpubHint": "Escanea el código QR de un contacto."
+  "scanNpubHint": "Escanea el código QR de un contacto.",
+  "invalidNpub": "Clave pública inválida. Por favor, inténtalo de nuevo."
 }
