--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -146,5 +146,6 @@
   "cameraPermissionDenied": "Kamerazugriff verweigert",
   "somethingWentWrong": "Etwas ist schiefgelaufen",
   "scanNpub": "QR-Code scannen",
-  "scanNpubHint": "Scannen Sie den QR-Code eines Kontakts."
+  "scanNpubHint": "Scannen Sie den QR-Code eines Kontakts.",
+  "invalidNpub": "Ungültiger öffentlicher Schlüssel. Bitte versuchen Sie es erneut."
 }
