--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -784,5 +784,10 @@
   "scanNpubHint": "Scan a contact's QR code.",
   "@scanNpubHint": {
     "description": "Hint text on scan npub screen"
+  },
+
+  "invalidNpub": "Invalid public key. Please try again.",
+  "@invalidNpub": {
+    "description": "Error message when scanned npub is invalid"
   }
 }
