--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -774,5 +774,20 @@
   "somethingWentWrong": "Something went wrong",
   "@somethingWentWrong": {
     "description": "Generic error message"
+  },
+
+  "scanNpub": "Scan QR code",
+  "@scanNpub": {
+    "description": "Title for scan npub screen"
+  },
+
+  "scanNpubHint": "Scan a contact's QR code.",
+  "@scanNpubHint": {
+    "description": "Hint text on scan npub screen"
+  },
+
+  "invalidNpub": "Invalid public key. Please try again.",
+  "@invalidNpub": {
+    "description": "Error message when scanned npub is invalid"
   }
 }
