--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -144,5 +144,8 @@
   "scanNsec": "Escanear código QR",
   "scanNsecHint": "Escanea el código QR de tu clave privada para iniciar sesión.",
   "cameraPermissionDenied": "Permiso de cámara denegado",
-  "somethingWentWrong": "Algo salió mal"
+  "somethingWentWrong": "Algo salió mal",
+  "scanNpub": "Escanear código QR",
+  "scanNpubHint": "Escanea el código QR de un contacto.",
+  "invalidNpub": "Clave pública inválida. Por favor, inténtalo de nuevo."
 }
