--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -144,5 +144,8 @@
   "scanNsec": "Scansiona codice QR",
   "scanNsecHint": "Scansiona il codice QR della tua chiave privata per accedere.",
   "cameraPermissionDenied": "Permesso fotocamera negato",
-  "somethingWentWrong": "Qualcosa è andato storto"
+  "somethingWentWrong": "Qualcosa è andato storto",
+  "scanNpub": "Scansiona codice QR",
+  "scanNpubHint": "Scansiona il codice QR di un contatto.",
+  "invalidNpub": "Chiave pubblica non valida. Riprova."
 }
