--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -144,5 +144,8 @@
   "scanNsec": "QR kodu tara",
   "scanNsecHint": "Giriş yapmak için özel anahtar QR kodunuzu tarayın.",
   "cameraPermissionDenied": "Kamera izni reddedildi",
-  "somethingWentWrong": "Bir şeyler yanlış gitti"
+  "somethingWentWrong": "Bir şeyler yanlış gitti",
+  "scanNpub": "QR kodu tara",
+  "scanNpubHint": "Bir kişinin QR kodunu tarayın.",
+  "invalidNpub": "Geçersiz açık anahtar. Lütfen tekrar deneyin."
 }
