feat: add WnTimestamp component (#171)
* feat: add WnTimestamp component (#149)

Add a timestamp widget for chat list that displays relative/absolute time
based on message age:
- Now: < 60 seconds
- Minutes: 1-59m (e.g., "32m")
- Hours: 1-12h (e.g., "4h")
- Time: same day, 12+ hours (e.g., "14:30")
- Yesterday: previous day, 12+ hours ago
- Weekday: 2-6 days ago (e.g., "Monday")
- Date: > 6 days, < 1 year (e.g., "Jun 10")
- Date & Year: > 1 year (e.g., "Jan 9, 2009")

Includes localization for 8 languages and widgetbook showcase with
interactive date/time picker playground.

* refactor: extract _monthShortName helper to reduce duplication

* fix(l10n): use clear Turkish minutes abbreviation 'dk' instead of ambiguous 'd'

* refactor: remove unused context parameter from _InteractiveTimestamp

* fix(timestamp): use calendar-day logic for weekday branch

Replace duration-based difference.inDays with normalized date comparison
to fix misclassification of calendar-day offsets near midnight.

* fix(timestamp): use duration-based check for one-year boundary

Replace date normalization with currentTime.difference(date).inDays <= 365
to handle leap year Feb 29 correctly and ensure consistent behavior across
all years. Add test for leap year edge case.

* refactor(wn_timestamp): inline typography variable

Remove local typography variable and use context.typographyScaled
directly in the Text style.

* Custom datetime knob (#177)

* feat: add custom datetime knob for stories

* refactor: move timestamp story controls to knob

---------

Co-authored-by: Pepi <mariajosefinaalliende@gmail.com>

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -145,7 +145,30 @@
   "scanNsecHint": "Scannen Sie den QR-Code Ihres privaten Schlüssels zum Anmelden.",
   "cameraPermissionDenied": "Kamerazugriff verweigert",
   "somethingWentWrong": "Etwas ist schiefgelaufen",
-  "scanNpub": "QR-Code scannen",
+"scanNpub": "QR-Code scannen",
   "scanNpubHint": "Scannen Sie den QR-Code eines Kontakts.",
-  "invalidNpub": "Ungültiger öffentlicher Schlüssel. Bitte versuchen Sie es erneut."
+  "invalidNpub": "Ungültiger öffentlicher Schlüssel. Bitte versuchen Sie es erneut.",
+  "timestampNow": "Jetzt",
+  "timestampMinutes": "{count}m",
+  "timestampHours": "{count}h",
+  "timestampYesterday": "Gestern",
+  "weekdayMonday": "Montag",
+  "weekdayTuesday": "Dienstag",
+  "weekdayWednesday": "Mittwoch",
+  "weekdayThursday": "Donnerstag",
+  "weekdayFriday": "Freitag",
+  "weekdaySaturday": "Samstag",
+  "weekdaySunday": "Sonntag",
+  "monthJanShort": "Jan",
+  "monthFebShort": "Feb",
+  "monthMarShort": "Mär",
+  "monthAprShort": "Apr",
+  "monthMayShort": "Mai",
+  "monthJunShort": "Jun",
+  "monthJulShort": "Jul",
+  "monthAugShort": "Aug",
+  "monthSepShort": "Sep",
+  "monthOctShort": "Okt",
+  "monthNovShort": "Nov",
+  "monthDecShort": "Dez"
 }
