--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -145,7 +145,30 @@
   "scanNsecHint": "Scannez le code QR de votre clé privée pour vous connecter.",
   "cameraPermissionDenied": "Autorisation caméra refusée",
   "somethingWentWrong": "Une erreur s'est produite",
-  "scanNpub": "Scanner le code QR",
+"scanNpub": "Scanner le code QR",
   "scanNpubHint": "Scannez le code QR d'un contact.",
-  "invalidNpub": "Clé publique invalide. Veuillez réessayer."
+  "invalidNpub": "Clé publique invalide. Veuillez réessayer.",
+  "timestampNow": "Maintenant",
+  "timestampMinutes": "{count}m",
+  "timestampHours": "{count}h",
+  "timestampYesterday": "Hier",
+  "weekdayMonday": "Lundi",
+  "weekdayTuesday": "Mardi",
+  "weekdayWednesday": "Mercredi",
+  "weekdayThursday": "Jeudi",
+  "weekdayFriday": "Vendredi",
+  "weekdaySaturday": "Samedi",
+  "weekdaySunday": "Dimanche",
+  "monthJanShort": "Jan",
+  "monthFebShort": "Fév",
+  "monthMarShort": "Mar",
+  "monthAprShort": "Avr",
+  "monthMayShort": "Mai",
+  "monthJunShort": "Juin",
+  "monthJulShort": "Juil",
+  "monthAugShort": "Août",
+  "monthSepShort": "Sep",
+  "monthOctShort": "Oct",
+  "monthNovShort": "Nov",
+  "monthDecShort": "Déc"
 }
