--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -145,7 +145,30 @@
   "scanNsecHint": "Scansiona il codice QR della tua chiave privata per accedere.",
   "cameraPermissionDenied": "Permesso fotocamera negato",
   "somethingWentWrong": "Qualcosa è andato storto",
-  "scanNpub": "Scansiona codice QR",
+"scanNpub": "Scansiona codice QR",
   "scanNpubHint": "Scansiona il codice QR di un contatto.",
-  "invalidNpub": "Chiave pubblica non valida. Riprova."
+  "invalidNpub": "Chiave pubblica non valida. Riprova.",
+  "timestampNow": "Ora",
+  "timestampMinutes": "{count}m",
+  "timestampHours": "{count}h",
+  "timestampYesterday": "Ieri",
+  "weekdayMonday": "Lunedì",
+  "weekdayTuesday": "Martedì",
+  "weekdayWednesday": "Mercoledì",
+  "weekdayThursday": "Giovedì",
+  "weekdayFriday": "Venerdì",
+  "weekdaySaturday": "Sabato",
+  "weekdaySunday": "Domenica",
+  "monthJanShort": "Gen",
+  "monthFebShort": "Feb",
+  "monthMarShort": "Mar",
+  "monthAprShort": "Apr",
+  "monthMayShort": "Mag",
+  "monthJunShort": "Giu",
+  "monthJulShort": "Lug",
+  "monthAugShort": "Ago",
+  "monthSepShort": "Set",
+  "monthOctShort": "Ott",
+  "monthNovShort": "Nov",
+  "monthDecShort": "Dic"
 }
