--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -145,7 +145,30 @@
   "scanNsecHint": "Giriş yapmak için özel anahtar QR kodunuzu tarayın.",
   "cameraPermissionDenied": "Kamera izni reddedildi",
   "somethingWentWrong": "Bir şeyler yanlış gitti",
-  "scanNpub": "QR kodu tara",
+"scanNpub": "QR kodu tara",
   "scanNpubHint": "Bir kişinin QR kodunu tarayın.",
-  "invalidNpub": "Geçersiz açık anahtar. Lütfen tekrar deneyin."
+  "invalidNpub": "Geçersiz açık anahtar. Lütfen tekrar deneyin.",
+  "timestampNow": "Şimdi",
+  "timestampMinutes": "{count}dk",
+  "timestampHours": "{count}sa",
+  "timestampYesterday": "Dün",
+  "weekdayMonday": "Pazartesi",
+  "weekdayTuesday": "Salı",
+  "weekdayWednesday": "Çarşamba",
+  "weekdayThursday": "Perşembe",
+  "weekdayFriday": "Cuma",
+  "weekdaySaturday": "Cumartesi",
+  "weekdaySunday": "Pazar",
+  "monthJanShort": "Oca",
+  "monthFebShort": "Şub",
+  "monthMarShort": "Mar",
+  "monthAprShort": "Nis",
+  "monthMayShort": "May",
+  "monthJunShort": "Haz",
+  "monthJulShort": "Tem",
+  "monthAugShort": "Ağu",
+  "monthSepShort": "Eyl",
+  "monthOctShort": "Eki",
+  "monthNovShort": "Kas",
+  "monthDecShort": "Ara"
 }
