--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -145,7 +145,30 @@
   "scanNsecHint": "Escanea el código QR de tu clave privada para iniciar sesión.",
   "cameraPermissionDenied": "Permiso de cámara denegado",
   "somethingWentWrong": "Algo salió mal",
-  "scanNpub": "Escanear código QR",
+"scanNpub": "Escanear código QR",
   "scanNpubHint": "Escanea el código QR de un contacto.",
-  "invalidNpub": "Clave pública inválida. Por favor, inténtalo de nuevo."
+  "invalidNpub": "Clave pública inválida. Por favor, inténtalo de nuevo.",
+  "timestampNow": "Ahora",
+  "timestampMinutes": "{count}m",
+  "timestampHours": "{count}h",
+  "timestampYesterday": "Ayer",
+  "weekdayMonday": "Lunes",
+  "weekdayTuesday": "Martes",
+  "weekdayWednesday": "Miércoles",
+  "weekdayThursday": "Jueves",
+  "weekdayFriday": "Viernes",
+  "weekdaySaturday": "Sábado",
+  "weekdaySunday": "Domingo",
+  "monthJanShort": "Ene",
+  "monthFebShort": "Feb",
+  "monthMarShort": "Mar",
+  "monthAprShort": "Abr",
+  "monthMayShort": "May",
+  "monthJunShort": "Jun",
+  "monthJulShort": "Jul",
+  "monthAugShort": "Ago",
+  "monthSepShort": "Sep",
+  "monthOctShort": "Oct",
+  "monthNovShort": "Nov",
+  "monthDecShort": "Dic"
 }
