--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -145,7 +145,30 @@
   "scanNsecHint": "Escaneie o código QR da sua chave privada para fazer login.",
   "cameraPermissionDenied": "Permissão de câmera negada",
   "somethingWentWrong": "Algo deu errado",
-  "scanNpub": "Escanear código QR",
+"scanNpub": "Escanear código QR",
   "scanNpubHint": "Escaneie o código QR de um contato.",
-  "invalidNpub": "Chave pública inválida. Por favor, tente novamente."
+  "invalidNpub": "Chave pública inválida. Por favor, tente novamente.",
+  "timestampNow": "Agora",
+  "timestampMinutes": "{count}m",
+  "timestampHours": "{count}h",
+  "timestampYesterday": "Ontem",
+  "weekdayMonday": "Segunda",
+  "weekdayTuesday": "Terça",
+  "weekdayWednesday": "Quarta",
+  "weekdayThursday": "Quinta",
+  "weekdayFriday": "Sexta",
+  "weekdaySaturday": "Sábado",
+  "weekdaySunday": "Domingo",
+  "monthJanShort": "Jan",
+  "monthFebShort": "Fev",
+  "monthMarShort": "Mar",
+  "monthAprShort": "Abr",
+  "monthMayShort": "Mai",
+  "monthJunShort": "Jun",
+  "monthJulShort": "Jul",
+  "monthAugShort": "Ago",
+  "monthSepShort": "Set",
+  "monthOctShort": "Out",
+  "monthNovShort": "Nov",
+  "monthDecShort": "Dez"
 }
