--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -190,5 +190,6 @@
   "signerErrorRequestInProgress": "Une autre requête est en cours. Veuillez patienter.",
   "signerErrorNoActivity": "Impossible de lancer le signer. Veuillez réessayer.",
   "signerErrorLaunchError": "Échec du lancement de l'application signer.",
-  "signerErrorUnknown": "Une erreur s'est produite avec le signer. Veuillez réessayer."
+  "signerErrorUnknown": "Une erreur s'est produite avec le signer. Veuillez réessayer.",
+  "messageNotFound": "Message introuvable"
 }
