--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -190,5 +190,6 @@
   "signerErrorRequestInProgress": "Başka bir istek işleniyor. Lütfen bekleyin.",
   "signerErrorNoActivity": "Signer başlatılamadı. Lütfen tekrar deneyin.",
   "signerErrorLaunchError": "Signer uygulaması başlatılamadı.",
-  "signerErrorUnknown": "Signer ile bir hata oluştu. Lütfen tekrar deneyin."
+  "signerErrorUnknown": "Signer ile bir hata oluştu. Lütfen tekrar deneyin.",
+  "messageNotFound": "Mesaj bulunamadı"
 }
