feat: Add WnChatListItem and refactor ChatListTile to use it
- Create WnChatListItem widget matching Figma specs
- Refactor ChatListTile to use WnChatListItem
- Add "you" localization key
- Add tests for WnChatListItem and update ChatListTile tests
- Update test_helpers to support provider overrides

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -786,6 +786,11 @@
     "description": "Error message when scanned npub is invalid"
   },
 
+  "you": "You",
+  "@you": {
+    "description": "Prefix for messages sent by the user"
+  },
+
   "timestampNow": "Now",
   "@timestampNow": {
     "description": "Timestamp for events less than 60 seconds ago"
