fix(widgets): improve WnChatListItem design to match Figma
- Use medium14Compact typography for message preview (was medium14)
- Support 2-line message preview with ellipsis truncation
- Center status icon vertically relative to message text
- Add colored status icons: red for failed, blue for request
- Add widgetbook showcase with 'Is From You' knob
- Add two-line message examples to widgetbook
- Wrap widgetbook in DesignWidthContainer (390px)

--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -171,5 +171,6 @@
   "monthNovShort": "Nov",
   "monthDecShort": "Déc",
   "loginWithSigner": "Se connecter avec Signer",
-  "signerConnectionError": "Impossible de se connecter au signer. Veuillez réessayer."
+  "signerConnectionError": "Impossible de se connecter au signer. Veuillez réessayer.",
+  "you": "Vous"
 }
