--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -171,5 +171,6 @@
   "monthNovShort": "Nov",
   "monthDecShort": "Dic",
   "loginWithSigner": "Accedi con Signer",
-  "signerConnectionError": "Impossibile connettersi al signer. Riprova."
+  "signerConnectionError": "Impossibile connettersi al signer. Riprova.",
+  "you": "Tu"
 }
