feat(chat-list): add pull-to-reveal search and filters header
Add search/filter bar that slides down from behind the slate when
pulling down on the chat list. The header commits to open once the
user drags past 50% and dismisses when scrolling up. Includes
WnSearchAndFilters widget with search field and filter chips.

Closes #148

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -172,5 +172,8 @@
   "monthDecShort": "Dez",
   "loginWithSigner": "Mit Signer anmelden",
   "signerConnectionError": "Verbindung zum Signer fehlgeschlagen. Bitte versuchen Sie es erneut.",
-  "you": "Du"
+  "you": "Du",
+  "search": "Search",
+  "filterChats": "Chats",
+  "filterArchive": "Archive"
 }
