--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -172,5 +172,8 @@
   "monthDecShort": "Dic",
   "loginWithSigner": "Accedi con Signer",
   "signerConnectionError": "Impossibile connettersi al signer. Riprova.",
-  "you": "Tu"
+  "you": "Tu",
+  "search": "Search",
+  "filterChats": "Chats",
+  "filterArchive": "Archive"
 }
