--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -172,5 +172,8 @@
   "monthDecShort": "Dez",
   "loginWithSigner": "Entrar com Signer",
   "signerConnectionError": "Não foi possível conectar ao signer. Por favor, tente novamente.",
-  "you": "Você"
+  "you": "Você",
+  "search": "Search",
+  "filterChats": "Chats",
+  "filterArchive": "Archive"
 }
