--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -172,5 +172,8 @@
   "monthDecShort": "Дек",
   "loginWithSigner": "Войти через Signer",
   "signerConnectionError": "Не удалось подключиться к signer. Попробуйте снова.",
-  "you": "Вы"
+  "you": "Вы",
+  "search": "Search",
+  "filterChats": "Chats",
+  "filterArchive": "Archive"
 }
