--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -172,5 +172,8 @@
   "monthDecShort": "Déc",
   "loginWithSigner": "Se connecter avec Signer",
   "signerConnectionError": "Impossible de se connecter au signer. Veuillez réessayer.",
-  "you": "Vous"
+  "you": "Vous",
+  "search": "Search",
+  "filterChats": "Chats",
+  "filterArchive": "Archive"
 }
