--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -172,5 +172,8 @@
   "monthDecShort": "Ara",
   "loginWithSigner": "Signer ile giriş yap",
   "signerConnectionError": "Signer'a bağlanılamadı. Lütfen tekrar deneyin.",
-  "you": "Sen"
+  "you": "Sen",
+  "search": "Search",
+  "filterChats": "Chats",
+  "filterArchive": "Archive"
 }
